--- a/soul.html
+++ b/soul.html
@@ -5,42 +5,52 @@
     <title>The Soul - Muse Engine</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
     <style>
-        body { margin: 0; background: #000; overflow: hidden; font-family: sans-serif; }
+        body { margin: 0; background: #000; overflow: hidden; font-family: 'Segoe UI', sans-serif; }
         #knowledge-panel {
-            position: fixed; top: 20px; left: 20px; width: 280px; 
-            background: rgba(0, 30, 40, 0.7); color: #00faff; 
+            position: fixed; top: 20px; left: 20px; width: 300px; 
+            background: rgba(0, 30, 45, 0.75); color: #00faff; 
             padding: 20px; border-radius: 15px; border: 1px solid #00faff;
-            backdrop-filter: blur(10px); max-height: 80vh; overflow-y: auto;
-            box-shadow: 0 0 20px rgba(0, 250, 255, 0.2); z-index: 100;
+            backdrop-filter: blur(12px); max-height: 85vh; overflow-y: auto;
+            box-shadow: 0 0 25px rgba(0, 250, 255, 0.25); z-index: 100;
         }
-        h3 { margin: 0 0 15px 0; font-size: 1.2em; border-bottom: 1px solid #00faff; padding-bottom: 10px; }
-        .item { margin-bottom: 15px; border-bottom: 1px solid rgba(0, 250, 255, 0.1); padding-bottom: 5px; }
-        .time { font-size: 0.75em; color: #888; }
-        .title { font-weight: bold; font-size: 0.9em; margin-top: 3px; }
+        h3 { margin: 0 0 15px 0; font-size: 1.3em; border-bottom: 2px solid #00faff; padding-bottom: 10px; letter-spacing: 1px; }
+        .item { margin-bottom: 18px; padding-bottom: 8px; border-bottom: 1px solid rgba(0, 250, 255, 0.15); transition: 0.3s; }
+        .item:hover { background: rgba(0, 250, 255, 0.05); border-radius: 5px; }
+        .time { font-size: 0.75em; color: #888; margin-bottom: 4px; }
+        .title-link { 
+            text-decoration: none; color: #00faff; font-weight: bold; font-size: 0.95em; 
+            display: block; transition: 0.2s;
+        }
+        .title-link:hover { color: #ffffff; transform: translateX(5px); }
+        /* 捲軸美化 */
+        #knowledge-panel::-webkit-scrollbar { width: 5px; }
+        #knowledge-panel::-webkit-scrollbar-thumb { background: #00faff; border-radius: 10px; }
     </style>
 </head>
 <body>
     <div id="knowledge-panel">
         <h3>🧠 核心知識庫</h3>
-        <div id="list">載入中...</div>
+        <div id="list">校準中...</div>
     </div>
 <script>
 let phase = 0, zoff = 0;
+const GITHUB_BASE = "https://github.com/OnicLiu/Openclaw/blob/main/";
+
 function setup() { createCanvas(windowWidth, windowHeight); updateList(); setInterval(updateList, 10000); }
 function draw() {
-    background(0, 50); translate(width / 2, height / 2); noFill();
-    for (let i = 0; i < 8; i++) {
-        stroke(0, 255, 255, map(i, 0, 8, 200, 20)); strokeWeight(1.5);
+    background(0, 45); translate(width / 2, height / 2); noFill();
+    for (let i = 0; i < 9; i++) {
+        stroke(0, 255, 255, map(i, 0, 9, 220, 15)); strokeWeight(1.5);
         beginShape();
         for (let a = 0; a < TWO_PI; a += 0.05) {
-            let xoff = map(cos(a + phase), -1, 1, 0, 1.2);
-            let yoff = map(sin(a + phase), -1, 1, 0, 1.2);
-            let r = map(noise(xoff, yoff, zoff), 0, 1, 150 - i*15, 250 - i*15);
+            let xoff = map(cos(a + phase), -1, 1, 0, 1.3);
+            let yoff = map(sin(a + phase), -1, 1, 0, 1.3);
+            let r = map(noise(xoff, yoff, zoff), 0, 1, 150 - i*16, 260 - i*16);
             vertex(r * cos(a), r * sin(a));
         }
         endShape(CLOSE);
     }
-    phase += 0.005; zoff += 0.01;
+    phase += 0.006; zoff += 0.012;
 }
 async function updateList() {
     try {
@@ -49,10 +59,10 @@ async function updateList() {
         document.getElementById('list').innerHTML = data.map(i => `
             <div class="item">
                 <div class="time">🕒 ${i.time}</div>
-                <div class="title">📄 ${i.title}</div>
+                <a href="${GITHUB_BASE}${i.title}.md" target="_blank" class="title-link">📄 ${i.title}</a>
             </div>
         `).join('');
-    } catch (e) { console.log("等待資料中..."); }
+    } catch (e) { console.log("等待資料流接通..."); }
 }
 function windowResized() { resizeCanvas(windowWidth, windowHeight); }
 </script>
