--- a/soul.html
+++ b/soul.html
@@ -15,91 +15,80 @@
         }
         h3 { margin: 0 0 15px 0; font-size: 1.2em; border-bottom: 2px solid #00ff41; padding-bottom: 10px; text-shadow: 0 0 5px #00ff41; }
         .item { margin-bottom: 18px; border-bottom: 1px solid rgba(0, 255, 65, 0.2); padding-bottom: 8px; }
-        .time { font-size: 0.75em; color: #008f11; }
+        .time { font-size: 0.75em; color: #008f11; margin-bottom: 5px; }
         .title-link { text-decoration: none; color: #00ff41; font-weight: bold; font-size: 0.9em; display: block; }
         .title-link:hover { color: #fff; text-shadow: 0 0 10px #00ff41; }
+        /* 捲軸美化 */
+        #knowledge-panel::-webkit-scrollbar { width: 4px; }
+        #knowledge-panel::-webkit-scrollbar-thumb { background: #00ff41; }
     </style>
 </head>
 <body>
     <div id="knowledge-panel">
         <h3>⚡ 數位偵察中心</h3>
-        <div id="list">正在接入矩陣...</div>
+        <div id="list">正在同步矩陣數據...</div>
     </div>
 <script>
-let symbols = [];
-let symbolSize = 20;
+let streams = [];
+const symbolSize = 20;
 const GITHUB_BASE = "https://github.com/OnicLiu/Openclaw/blob/main/";
 
-function setup() {
-    createCanvas(windowWidth, windowHeight);
-    background(0);
-    let x = 0;
-    for (let i = 0; i <= width / symbolSize; i++) {
-        let stream = new Stream();
-        stream.generateSymbols(x, random(-1000, 0));
-        symbols.push(stream);
-        x += symbolSize;
+class Symbol {
+    constructor(x, y, speed, first) {
+        this.x = x; this.y = y; this.speed = speed; this.first = first;
+        this.value = ''; this.switchInterval = round(random(5, 25));
+        this.setToRandomSymbol();
     }
-    textSize(symbolSize);
-    updateList();
-    setInterval(updateList, 10000);
-}
-
-function draw() {
-    background(0, 150); // 這裡的透明度控制殘影長度
-    symbols.forEach(function(stream) {
-        stream.render();
-    });
-}
-
-function Symbol(x, y, speed, first) {
-    this.x = x;
-    this.y = y;
-    this.value;
-    this.speed = speed;
-    this.switchInterval = round(random(2, 20));
-    this.first = first;
-
-    this.setToRandomSymbol = function() {
+    setToRandomSymbol() {
         if (frameCount % this.switchInterval == 0) {
-            // 隨機選取片假名或數字
             this.value = String.fromCharCode(0x30A0 + round(random(0, 96)));
         }
     }
-
-    this.rain = function() {
-        this.y = (this.y >= height) ? 0 : this.y + this.speed;
-    }
+    rain() { this.y = (this.y >= height) ? 0 : this.y + this.speed; }
 }
 
-function Stream() {
-    this.symbols = [];
-    this.totalSymbols = round(random(5, 30));
-    this.speed = random(5, 15);
-
-    this.generateSymbols = function(x, y) {
+class Stream {
+    constructor() {
+        this.symbols = [];
+        this.totalSymbols = round(random(5, 35));
+        this.speed = random(5, 12);
+    }
+    generateSymbols(x, y) {
         let first = round(random(0, 4)) == 1;
         for (let i = 0; i <= this.totalSymbols; i++) {
-            symbol = new Symbol(x, y, this.speed, first);
-            symbol.setToRandomSymbol();
+            let symbol = new Symbol(x, y, this.speed, first);
             this.symbols.push(symbol);
             y -= symbolSize;
             first = false;
         }
     }
-
-    this.render = function() {
-        this.symbols.forEach(function(symbol) {
-            if (symbol.first) {
-                fill(180, 255, 180); // 第一個字比較亮
-            } else {
-                fill(0, 255, 70);
-            }
-            text(symbol.value, symbol.x, symbol.y);
-            symbol.rain();
-            symbol.setToRandomSymbol();
+    render() {
+        this.symbols.forEach(s => {
+            if (s.first) fill(180, 255, 180, 255);
+            else fill(0, 255, 70, 220);
+            text(s.value, s.x, s.y);
+            s.rain();
+            s.setToRandomSymbol();
         });
     }
+}
+
+function setup() {
+    createCanvas(windowWidth, windowHeight);
+    background(0);
+    textSize(symbolSize);
+    for (let x = 0; x <= width; x += symbolSize) {
+        let stream = new Stream();
+        stream.generateSymbols(x, random(-1000, 0));
+        streams.push(stream);
+    }
+    updateList();
+    setInterval(updateList, 10000);
+}
+
+function draw() {
+    background(0, 100); 
+    streams.forEach(s => s.render());
 }
 
 async function updateList() {
@@ -112,9 +101,8 @@ async function updateList() {
                 <a href="${GITHUB_BASE}${i.title}.md" target="_blank" class="title-link">> [DECODED] ${i.title}</a>
             </div>
         `).join('');
-    } catch (e) { console.log("矩陣同步中..."); }
+    } catch (e) { console.log("系統解碼中..."); }
 }
-
 function windowResized() { resizeCanvas(windowWidth, windowHeight); }
 </script>
 </body>
