--- a/soul.html
+++ b/soul.html
@@ -2,107 +2,87 @@
 <html lang="zh-TW">
 <head>
     <meta charset="UTF-8">
-    <title>Matrix Soul - Muse Engine</title>
+    <title>The Soul - Muse Engine</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
     <style>
-        body { margin: 0; background: #000; overflow: hidden; font-family: 'Courier New', monospace; }
+        body { margin: 0; background: #000; overflow: hidden; font-family: 'Segoe UI', Tahoma, sans-serif; }
         #knowledge-panel {
             position: fixed; top: 20px; left: 20px; width: 300px; 
-            background: rgba(0, 20, 0, 0.85); color: #00ff41; 
-            padding: 20px; border-radius: 5px; border: 1px solid #00ff41;
-            backdrop-filter: blur(8px); max-height: 85vh; overflow-y: auto;
-            box-shadow: 0 0 20px rgba(0, 255, 65, 0.2); z-index: 100;
+            background: rgba(0, 30, 45, 0.7); color: #00faff; 
+            padding: 20px; border-radius: 15px; border: 1px solid rgba(0, 250, 255, 0.5);
+            backdrop-filter: blur(12px); max-height: 85vh; overflow-y: auto;
+            box-shadow: 0 0 30px rgba(0, 250, 255, 0.2); z-index: 100;
         }
-        h3 { margin: 0 0 15px 0; font-size: 1.2em; border-bottom: 2px solid #00ff41; padding-bottom: 10px; text-shadow: 0 0 5px #00ff41; }
-        .item { margin-bottom: 18px; border-bottom: 1px solid rgba(0, 255, 65, 0.2); padding-bottom: 8px; }
-        .time { font-size: 0.75em; color: #008f11; margin-bottom: 5px; }
-        .title-link { text-decoration: none; color: #00ff41; font-weight: bold; font-size: 0.9em; display: block; }
-        .title-link:hover { color: #fff; text-shadow: 0 0 10px #00ff41; }
+        h3 { margin: 0 0 15px 0; font-size: 1.3em; border-bottom: 2px solid #00faff; padding-bottom: 10px; letter-spacing: 1px; text-transform: uppercase; }
+        .item { margin-bottom: 18px; padding-bottom: 8px; border-bottom: 1px solid rgba(0, 250, 255, 0.15); transition: 0.3s; }
+        .item:hover { background: rgba(0, 250, 255, 0.05); padding-left: 5px; border-radius: 5px; }
+        .time { font-size: 0.75em; color: rgba(255, 255, 255, 0.5); margin-bottom: 4px; }
+        .title-link { 
+            text-decoration: none; color: #00faff; font-weight: bold; font-size: 0.95em; 
+            display: block; transition: 0.2s;
+        }
+        .title-link:hover { color: #ffffff; transform: translateX(5px); }
         /* 捲軸美化 */
         #knowledge-panel::-webkit-scrollbar { width: 4px; }
-        #knowledge-panel::-webkit-scrollbar-thumb { background: #00ff41; }
+        #knowledge-panel::-webkit-scrollbar-thumb { background: #00faff; border-radius: 10px; }
     </style>
 </head>
 <body>
     <div id="knowledge-panel">
-        <h3>⚡ 數位偵察中心</h3>
-        <div id="list">正在同步矩陣數據...</div>
+        <h3>🧠 核心知識庫</h3>
+        <div id="list">校準中...</div>
     </div>
 <script>
-let streams = [];
-const symbolSize = 20;
+let phase = 0, zoff = 0;
 const GITHUB_BASE = "https://github.com/OnicLiu/Openclaw/blob/main/";
 
-class Symbol {
-    constructor(x, y, speed, first) {
-        this.x = x; this.y = y; this.speed = speed; this.first = first;
-        this.value = ''; this.switchInterval = round(random(5, 25));
-        this.setToRandomSymbol();
-    }
-    setToRandomSymbol() {
-        if (frameCount % this.switchInterval == 0) {
-            this.value = String.fromCharCode(0x30A0 + round(random(0, 96)));
-        }
-    }
-    rain() { this.y = (this.y >= height) ? 0 : this.y + this.speed; }
-}
-
-class Stream {
-    constructor() {
-        this.symbols = [];
-        this.totalSymbols = round(random(5, 35));
-        this.speed = random(5, 12);
-    }
-    generateSymbols(x, y) {
-        let first = round(random(0, 4)) == 1;
-        for (let i = 0; i <= this.totalSymbols; i++) {
-            let symbol = new Symbol(x, y, this.speed, first);
-            this.symbols.push(symbol);
-            y -= symbolSize;
-            first = false;
-        }
-    }
-    render() {
-        this.symbols.forEach(s => {
-            if (s.first) fill(180, 255, 180, 255);
-            else fill(0, 255, 70, 220);
-            text(s.value, s.x, s.y);
-            s.rain();
-            s.setToRandomSymbol();
-        });
-    }
-}
-
-function setup() {
-    createCanvas(windowWidth, windowHeight);
-    background(0);
-    textSize(symbolSize);
-    for (let x = 0; x <= width; x += symbolSize) {
-        let stream = new Stream();
-        stream.generateSymbols(x, random(-1000, 0));
-        streams.push(stream);
-    }
-    updateList();
-    setInterval(updateList, 10000);
+function setup() { 
+    createCanvas(windowWidth, windowHeight); 
+    updateList(); 
+    setInterval(updateList, 15000); // 每 15 秒檢查一次清單
 }
 
 function draw() {
-    background(0, 100); 
-    streams.forEach(s => s.render());
+    background(0, 45); // 產生平滑的殘影
+    translate(width / 2, height / 2);
+    noFill();
+    
+    // 繪製多層有機律動圓環
+    for (let i = 0; i < 9; i++) {
+        stroke(0, 250, 255, map(i, 0, 9, 230, 15)); 
+        strokeWeight(1.5);
+        beginShape();
+        for (let a = 0; a < TWO_PI; a += 0.05) {
+            // 使用 Perlin Noise 產生生物般的波動
+            let xoff = map(cos(a + phase), -1, 1, 0, 1.3);
+            let yoff = map(sin(a + phase), -1, 1, 0, 1.3);
+            let r = map(noise(xoff, yoff, zoff), 0, 1, 150 - i*16, 260 - i*16);
+            let x = r * cos(a);
+            let y = r * sin(a);
+            vertex(x, y);
+        }
+        endShape(CLOSE);
+    }
+    phase += 0.006; 
+    zoff += 0.01; 
 }
 
 async function updateList() {
     try {
         const res = await fetch('data.json?t=' + Date.now());
         const data = await res.json();
-        document.getElementById('list').innerHTML = data.map(i => `
+        const listContainer = document.getElementById('list');
+        listContainer.innerHTML = data.map(i => `
             <div class="item">
                 <div class="time">🕒 ${i.time}</div>
-                <a href="${GITHUB_BASE}${i.title}.md" target="_blank" class="title-link">> [DECODED] ${i.title}</a>
+                <a href="${GITHUB_BASE}${i.title}.md" target="_blank" class="title-link">📄 ${i.title}</a>
             </div>
         `).join('');
-    } catch (e) { console.log("系統解碼中..."); }
+    } catch (e) { 
+        console.log("正在等待數據傳輸..."); 
+    }
 }
+
 function windowResized() { resizeCanvas(windowWidth, windowHeight); }
 </script>
 </body>
